fixed typo in pollicy moment

--- a/LinearAdversarialReisz.ipynb
+++ b/LinearAdversarialReisz.ipynb
@@ -288,7 +288,7 @@
     "    p1 = policy(x)\n",
     "    if len(t1.shape) > 1:\n",
     "        p1 = p1.reshape(-1, 1)\n",
-    "    return t1 * p1 - t0 * (1 - p1) \n",
+    "    return t1 * p1 + t0 * (1 - p1) \n",
     "\n",
     "def true_reisz(x, propensity):\n",
     "    p1 = policy(x)\n",
