fixed typo in pollicy moment

--- a/LinearAdversarialReisz.ipynb
+++ b/LinearAdversarialReisz.ipynb
@@ -293,7 +293,7 @@
     "def true_reisz(x, propensity):\n",
     "    p1 = policy(x)\n",
     "    prop1 = propensity(x)\n",
-    "    return p1 * (x[:, 0]==1) / prop1 - (1 - p1) * (x[:, 0]==0)/(1 - prop1)"
+    "    return p1 * (x[:, 0]==1) / prop1 + (1 - p1) * (x[:, 0]==0)/(1 - prop1)"
    ]
   },
   {
