polished linear notebook

--- a/LinearAdversarialReisz.ipynb
+++ b/LinearAdversarialReisz.ipynb
@@ -187,8 +187,8 @@
     "def nonlin(x):\n",
     "    # return 1.5 * (x[:, 1]**2)\n",
     "    # return x[:, 1]\n",
-    "    return scipy.special.expit(10 * x[:, 1])\n",
-    "    # return np.abs(x[:, 1])\n",
+    "    # return scipy.special.expit(10 * x[:, 1])\n",
+    "    return np.abs(x[:, 1])\n",
     "    # return 1.5*scipy.special.expit(10 * x[:, 1]) - 1.5*scipy.special.expit(10 * x[:, 2])\n",
     "\n",
     "def true_propensity(X):\n",
@@ -204,8 +204,8 @@
     "    return X, y\n",
     "\n",
     "np.random.seed(123)\n",
-    "n = 500\n",
-    "p = 10\n",
+    "n = 2000\n",
+    "p = 3\n",
     "X, y = gen_data(n, p)\n",
     "X_test, y_test = gen_data(n, p)"
    ]
@@ -360,7 +360,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "\n",
     "# feat = Pipeline([('p', CoordinatePolynomialFeatures(degree=3))])\n",
-    "feat = Pipeline([('p', PolynomialFeatures(degree=2, include_bias=False))])\n",
+    "feat = Pipeline([('p', PolynomialFeatures(degree=4, include_bias=False))])\n",
     "# feat = Pipeline([('nys', Nystroem(n_components=100, kernel='rbf', gamma=5, degree=3))])\n",
     "# feat = Pipeline([('nys', RBFSampler(n_components=100, gamma=2))])\n",
     "feat.steps.append(('s', StandardScaler()))\n",
@@ -368,7 +368,7 @@
     "# feat = Pipeline([('p', SeparateFeaturizer(feat))])\n",
     "# feat.steps.append(('cnt', PolynomialFeatures(degree=1, include_bias=True)))\n",
     "splin = SparseLinearAdvRiesz(moment_fn, featurizer=feat,\n",
-    "                             n_iter=50000, lambda_theta=0.001, B=10,\n",
+    "                             n_iter=50000, lambda_theta=0.01, B=10,\n",
     "                             tol=0.00001).fit(X)"
    ]
   },
@@ -493,7 +493,7 @@
     "from sklearn.linear_model import LassoCV, Lasso, LogisticRegressionCV\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
-    "est = Pipeline([('p', PolynomialFeatures(degree=1)), ('l', Lasso(alpha=.05))]).fit(X, y)\n",
+    "est = Pipeline([('p', PolynomialFeatures(degree=1)), ('l', Lasso(alpha=.1))]).fit(X, y)\n",
     "propensity = Pipeline([('p', PolynomialFeatures(degree=1)), ('l', LogisticRegressionCV())]).fit(X[:, 1:], X[:, 0])"
    ]
   },
