fixed small mistakes in nystrom derivation regartding penalty

--- a/LinearAdversarialReisz-local.ipynb
+++ b/LinearAdversarialReisz-local.ipynb
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -903,19 +903,7 @@
     "id": "cP_90Z3orXRv",
     "outputId": "792b975c-a4f1-4709-8434-7952e09f9bfd"
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'SparseLinearAdvRiesz' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-32-e6456eed9a66>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mfeat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msteps\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m's'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mStandardScaler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mfeat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msteps\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'cnt'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPolynomialFeatures\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdegree\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minclude_bias\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m splin = SparseLinearAdvRiesz(moment_fn, featurizer=feat,\n\u001b[0m\u001b[0;32m      5\u001b[0m                              \u001b[0mn_iter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m50000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlambda_theta\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.01\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mB\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m                              tol=0.00001).fit(X)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'SparseLinearAdvRiesz' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "feat = Pipeline([('p', PolynomialFeatures(degree=3, include_bias=False))])\n",
     "feat.steps.append(('s', StandardScaler()))\n",
@@ -1560,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1610,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1628,14 +1616,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.2758569881828864, 0.2758579133515531, 0.2758656633817295, 0.2759305905838937, 0.27647495359342705, 0.2810664911677023, 0.3207236738582416, 0.6074447306837722, 1.580294705335513, 3.4846354686097873, 4.629513880612569, 4.728876136077094, 4.731087887825929, 4.731121486722957]\n"
+      "[0.1379286822158951, 0.13793053256383503, 0.13794603336520167, 0.13807593948699987, 0.13916813309424836, 0.14851537585686891, 0.223802970327299, 0.5554524601878913, 1.3316491169917462, 2.151488042428692, 2.3525577663629345, 2.365280110681903, 2.3655567270517857, 2.365560926947988]\n"
      ]
     }
    ],
@@ -1645,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1654,7 +1642,7 @@
        "1e-10"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1665,16 +1653,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2.1880597641155943, 2.0719957748278905, 2.304123753403298)"
+       "(2.18805973071156, 2.07199577260205, 2.30412368882107)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1728,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1737,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1746,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1756,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1782,7 +1770,7 @@
        "4.328761281083062e-05"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1793,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1790,7 @@
        "(2.1873070899294107, 2.071959439742739, 2.302654740116082)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1816,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1854,28 +1842,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:   14.2s\n",
-      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:  1.0min finished\n",
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:   23.6s\n",
-      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:  2.5min finished\n",
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:    9.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:   57.7s finished\n",
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:   23.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:  2.3min finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from kernel_experiments import kernel_experiments\n",
     "n_samples_list = [500]\n",
@@ -1896,10 +1865,10 @@
     "n_samples_list = [100, 500]\n",
     "for n_samples in n_samples_list:\n",
     "    res[f'n={n_samples}'] = {}\n",
-    "    for name, var in [('adv_kreisz', f'advreisz_nocfit_n_{n_samples}.jbl'),\n",
-    "                        ('adv_kreisz_cfit', f'advreisz_5fold_cfit_n_{n_samples}.jbl'),\n",
-    "                        ('kreisz', f'kernelreisz_nocfit_n_{n_samples}.jbl'), \n",
-    "                        ('kreisz_cfit', f'kernelreisz_5fold_cfit_n_{n_samples}.jbl')]:\n",
+    "    for name, var in [('adv_kreisz', f'advreisz_nocfit_n_{n_samples}_1_100.jbl'),\n",
+    "                        ('adv_kreisz_cfit', f'advreisz_5fold_cfit_n_{n_samples}_1_100.jbl'),\n",
+    "                        ('kreisz', f'kernelreisz_nocfit_n_{n_samples}_1_100.jbl'), \n",
+    "                        ('kreisz_cfit', f'kernelreisz_5fold_cfit_n_{n_samples}_1_100.jbl')]:\n",
     "        results = joblib.load(var)\n",
     "        results = np.array(results)\n",
     "        if plot:\n",
@@ -2025,6 +1994,68 @@
      "output_type": "display_data"
     }
    ],
+   "source": [
+    "import pandas as pd\n",
+    "with pd.option_context('display.float_format', '{:0.2f}'.format):\n",
+    "    display(pd.concat(res, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:   10.5s\n"
+     ]
+    }
+   ],
+   "source": [
+    "from kernel_experiments import nystrom_kernel_experiments\n",
+    "n_samples_list = [500]\n",
+    "nystrom_kernel_experiments(n_samples_list, kernelid=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "import os\n",
+    "true = 2.2\n",
+    "res = {}\n",
+    "plot = False\n",
+    "n_samples_list = [500]\n",
+    "for n_samples in n_samples_list:\n",
+    "    res[f'n={n_samples}'] = {}\n",
+    "    for name, var in [('adv_kreisz', f'advnystromreisz_nocfit_n_{n_samples}_1_100.jbl'),\n",
+    "                        ('adv_kreisz_cfit', f'advnystromreisz_5fold_cfit_n_{n_samples}_1_100.jbl'),\n",
+    "                        ('kreisz', f'nystormkernelreisz_nocfit_n_{n_samples}_1_100.jbl'), \n",
+    "                        ('kreisz_cfit', f'nystormkernelreisz_5fold_cfit_n_{n_samples}_1_100.jbl')]:\n",
+    "        results = joblib.load(var)\n",
+    "        results = np.array(results)\n",
+    "        if plot:\n",
+    "            plt.hist(results[:, 0])\n",
+    "            plt.title(f'{var}, n={n_samples}')\n",
+    "            plt.show()\n",
+    "        res[f'n={n_samples}'][name] = {'cov': np.mean((results[:, 1] <= true) & (results[:, 2] >= true)),\n",
+    "                                 'bias': np.mean(results[:, 0] - true),\n",
+    "                                 'rmse': np.sqrt(np.mean((results[:, 0] - true)**2)),\n",
+    "                                 'ci_length': np.mean(results[:, 2] - results[:, 1])}\n",
+    "    res[f'n={n_samples}'] = pd.DataFrame(res[f'n={n_samples}'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "with pd.option_context('display.float_format', '{:0.2f}'.format):\n",
