all experimental results

--- a/AdversarialReisz.ipynb
+++ b/AdversarialReisz.ipynb
@@ -2529,6 +2529,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{llrr}\n",
+      "\\toprule\n",
+      "       &           &  adv\\_nnet &  adv\\_nnet\\_cfit \\\\\n",
+      "\\midrule\n",
+      "\\multirow{4}{*}{\\textbf{n=100}} & \\textbf{cov} &      0.23 &           0.23 \\\\\n",
+      "       & \\textbf{bias} &     -0.31 &          -0.32 \\\\\n",
+      "       & \\textbf{rmse} &      0.41 &           0.41 \\\\\n",
+      "       & \\textbf{ci\\_length} &      0.29 &           0.35 \\\\\n",
+      "\\cline{1-4}\n",
+      "\\multirow{4}{*}{\\textbf{n=500}} & \\textbf{cov} &      0.72 &           0.63 \\\\\n",
+      "       & \\textbf{bias} &     -0.11 &          -0.13 \\\\\n",
+      "       & \\textbf{rmse} &      0.15 &           0.17 \\\\\n",
+      "       & \\textbf{ci\\_length} &      0.35 &           0.34 \\\\\n",
+      "\\cline{1-4}\n",
+      "\\multirow{4}{*}{\\textbf{n=1000}} & \\textbf{cov} &      0.89 &           0.96 \\\\\n",
+      "       & \\textbf{bias} &     -0.03 &          -0.04 \\\\\n",
+      "       & \\textbf{rmse} &      0.10 &           0.09 \\\\\n",
+      "       & \\textbf{ci\\_length} &      0.32 &           0.32 \\\\\n",
+      "\\cline{1-4}\n",
+      "\\multirow{4}{*}{\\textbf{n=2000}} & \\textbf{cov} &      0.96 &           0.96 \\\\\n",
+      "       & \\textbf{bias} &      0.00 &           0.00 \\\\\n",
+      "       & \\textbf{rmse} &      0.06 &           0.05 \\\\\n",
+      "       & \\textbf{ci\\_length} &      0.23 &           0.23 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "with pd.option_context('display.float_format', '{:0.2f}'.format):\n",
+    "    print(pd.concat(res, axis=0).loc[['n=100', 'n=500', 'n=1000', 'n=2000']].to_latex(bold_rows=True, multirow=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
