--- a/401k.ipynb
+++ b/401k.ipynb
@@ -3882,13 +3882,7 @@
       "Validation moment violation: 0.16902147\n",
       "Epoch #110\n",
       "Validation moment violation: 0.21155316\n",
-      "Epoch #111\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch #111\n",
       "Validation moment violation: 0.22580372\n",
       "Epoch #112\n",
       "Validation moment violation: 0.2285832\n",
