added auto penalty kernel experiments

--- a/LinearAdversarialReisz-local.ipynb
+++ b/LinearAdversarialReisz-local.ipynb
@@ -3707,6 +3707,149 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:   48.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:  5.2min finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:  1.1min\n",
+      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:  6.1min finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:   13.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:  1.3min finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:   22.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:  2.2min finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "from kernel_experiments import auto_kernel_experiments\n",
+    "auto_kernel_experiments([500], sample_its=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>autoadv_kreisz</th>\n",
+       "      <th>autoadv_kreisz_cfit</th>\n",
+       "      <th>autokreisz</th>\n",
+       "      <th>autokreisz_cfit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">n=500</th>\n",
+       "      <th>cov</th>\n",
+       "      <td>0.960000</td>\n",
+       "      <td>0.970000</td>\n",
+       "      <td>0.930000</td>\n",
+       "      <td>0.940000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bias</th>\n",
+       "      <td>-0.000434</td>\n",
+       "      <td>0.034386</td>\n",
+       "      <td>-0.011456</td>\n",
+       "      <td>-0.003605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rmse</th>\n",
+       "      <td>0.125334</td>\n",
+       "      <td>0.175807</td>\n",
+       "      <td>0.104630</td>\n",
+       "      <td>0.108636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ci_length</th>\n",
+       "      <td>0.476887</td>\n",
+       "      <td>0.702799</td>\n",
+       "      <td>0.354928</td>\n",
+       "      <td>0.408977</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 autoadv_kreisz  autoadv_kreisz_cfit  autokreisz  \\\n",
+       "n=500 cov              0.960000             0.970000    0.930000   \n",
+       "      bias            -0.000434             0.034386   -0.011456   \n",
+       "      rmse             0.125334             0.175807    0.104630   \n",
+       "      ci_length        0.476887             0.702799    0.354928   \n",
+       "\n",
+       "                 autokreisz_cfit  \n",
+       "n=500 cov               0.940000  \n",
+       "      bias             -0.003605  \n",
+       "      rmse              0.108636  \n",
+       "      ci_length         0.408977  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "true = 2.2\n",
+    "res = {}\n",
+    "plot = False\n",
+    "n_samples_list = [500]\n",
+    "for n_samples in n_samples_list:\n",
+    "    res[f'n={n_samples}'] = {}\n",
+    "    for name, var in [('autoadv_kreisz', f'auto_advreisz_nocfit_n_{n_samples}_1_100.jbl'),\n",
+    "                        ('autoadv_kreisz_cfit', f'auto_advreisz_5fold_cfit_n_{n_samples}_1_100.jbl'),\n",
+    "                        ('autokreisz', f'auto_kernelreisz_nocfit_n_{n_samples}_1_100.jbl'), \n",
+    "                        ('autokreisz_cfit', f'auto_kernelreisz_5fold_cfit_n_{n_samples}_1_100.jbl')]:\n",
+    "        results = joblib.load(var)\n",
+    "        results = np.array(results)\n",
+    "        if plot:\n",
+    "            plt.hist(results[:, 0])\n",
+    "            plt.title(f'{var}, n={n_samples}')\n",
+    "            plt.show()\n",
+    "        res[f'n={n_samples}'][name] = {'cov': np.mean((results[:, 1] <= true) & (results[:, 2] >= true)),\n",
+    "                                 'bias': np.mean(results[:, 0] - true),\n",
+    "                                 'rmse': np.sqrt(np.mean((results[:, 0] - true)**2)),\n",
+    "                                 'ci_length': np.mean(results[:, 2] - results[:, 1])}\n",
+    "    res[f'n={n_samples}'] = pd.DataFrame(res[f'n={n_samples}'])\n",
+    "pd.concat(res, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
