added adversarial rf riesz implementation based on the oracle section

--- a/401k.ipynb
+++ b/401k.ipynb
@@ -5527,9 +5527,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['401k_res_n_splits_1.jbl']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import joblib\n",
     "\n",
@@ -5538,189 +5549,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import joblib\n",
-    "\n",
-    "old_res = joblib.load(f'401k_res_n_splits_{n_splits}.jbl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>all</th>\n",
-       "      <th>q=1</th>\n",
-       "      <th>q=2</th>\n",
-       "      <th>q=3</th>\n",
-       "      <th>q=4</th>\n",
-       "      <th>q=5</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>advnnet</th>\n",
-       "      <td>8057.74 (1145.68)</td>\n",
-       "      <td>3715.19 (1004.38)</td>\n",
-       "      <td>1451.91 (1554.57)</td>\n",
-       "      <td>4893.89 (1630.69)</td>\n",
-       "      <td>10834.89 (1981.76)</td>\n",
-       "      <td>20003.73 (5007.86)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>advnnet_tmle</th>\n",
-       "      <td>8050.98 (1146.14)</td>\n",
-       "      <td>3725.72 (1004.53)</td>\n",
-       "      <td>1473.97 (1555.17)</td>\n",
-       "      <td>4894.32 (1630.75)</td>\n",
-       "      <td>10906.54 (1979.83)</td>\n",
-       "      <td>19984.01 (5005.83)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>nys_advrkhs</th>\n",
-       "      <td>7642.74 (1123.25)</td>\n",
-       "      <td>3297.10 (842.13)</td>\n",
-       "      <td>1112.28 (1705.50)</td>\n",
-       "      <td>5709.84 (990.64)</td>\n",
-       "      <td>10170.44 (2129.04)</td>\n",
-       "      <td>18909.06 (4397.46)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>nys_advrkhs_tmle</th>\n",
-       "      <td>7644.32 (1123.54)</td>\n",
-       "      <td>3280.17 (841.07)</td>\n",
-       "      <td>1140.30 (1705.94)</td>\n",
-       "      <td>5787.61 (990.55)</td>\n",
-       "      <td>10207.95 (2128.31)</td>\n",
-       "      <td>18943.21 (4396.91)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>nys_rkhs</th>\n",
-       "      <td>7668.70 (1120.26)</td>\n",
-       "      <td>3347.22 (869.65)</td>\n",
-       "      <td>1268.94 (1708.50)</td>\n",
-       "      <td>5713.12 (1044.87)</td>\n",
-       "      <td>9876.58 (2066.54)</td>\n",
-       "      <td>18766.86 (4458.29)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>nys_rkhs_tmle</th>\n",
-       "      <td>7674.06 (1120.54)</td>\n",
-       "      <td>3339.12 (868.89)</td>\n",
-       "      <td>1291.54 (1708.69)</td>\n",
-       "      <td>5762.74 (1044.77)</td>\n",
-       "      <td>9934.91 (2066.16)</td>\n",
-       "      <td>18786.90 (4457.75)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>plugin_lg</th>\n",
-       "      <td>6185.66 (1354.52)</td>\n",
-       "      <td>3763.84 (994.24)</td>\n",
-       "      <td>1055.13 (1660.50)</td>\n",
-       "      <td>4895.08 (1302.90)</td>\n",
-       "      <td>9287.63 (2327.20)</td>\n",
-       "      <td>17878.75 (4676.24)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>plugin_lg_tmle</th>\n",
-       "      <td>6160.61 (1354.20)</td>\n",
-       "      <td>3765.91 (994.18)</td>\n",
-       "      <td>1082.92 (1660.57)</td>\n",
-       "      <td>4896.83 (1302.85)</td>\n",
-       "      <td>9290.84 (2327.17)</td>\n",
-       "      <td>17887.27 (4676.08)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>plugin_rf</th>\n",
-       "      <td>7479.35 (1080.60)</td>\n",
-       "      <td>3729.77 (817.87)</td>\n",
-       "      <td>1211.21 (1507.66)</td>\n",
-       "      <td>4788.29 (1242.76)</td>\n",
-       "      <td>9652.92 (2239.55)</td>\n",
-       "      <td>18433.62 (4625.21)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>plugin_rf_tmle</th>\n",
-       "      <td>7598.20 (1080.47)</td>\n",
-       "      <td>3790.56 (818.19)</td>\n",
-       "      <td>1306.01 (1507.91)</td>\n",
-       "      <td>4803.93 (1242.77)</td>\n",
-       "      <td>9711.37 (2239.21)</td>\n",
-       "      <td>18514.11 (4624.93)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                all                q=1                q=2  \\\n",
-       "advnnet           8057.74 (1145.68)  3715.19 (1004.38)  1451.91 (1554.57)   \n",
-       "advnnet_tmle      8050.98 (1146.14)  3725.72 (1004.53)  1473.97 (1555.17)   \n",
-       "nys_advrkhs       7642.74 (1123.25)   3297.10 (842.13)  1112.28 (1705.50)   \n",
-       "nys_advrkhs_tmle  7644.32 (1123.54)   3280.17 (841.07)  1140.30 (1705.94)   \n",
-       "nys_rkhs          7668.70 (1120.26)   3347.22 (869.65)  1268.94 (1708.50)   \n",
-       "nys_rkhs_tmle     7674.06 (1120.54)   3339.12 (868.89)  1291.54 (1708.69)   \n",
-       "plugin_lg         6185.66 (1354.52)   3763.84 (994.24)  1055.13 (1660.50)   \n",
-       "plugin_lg_tmle    6160.61 (1354.20)   3765.91 (994.18)  1082.92 (1660.57)   \n",
-       "plugin_rf         7479.35 (1080.60)   3729.77 (817.87)  1211.21 (1507.66)   \n",
-       "plugin_rf_tmle    7598.20 (1080.47)   3790.56 (818.19)  1306.01 (1507.91)   \n",
-       "\n",
-       "                                q=3                 q=4                 q=5  \n",
-       "advnnet           4893.89 (1630.69)  10834.89 (1981.76)  20003.73 (5007.86)  \n",
-       "advnnet_tmle      4894.32 (1630.75)  10906.54 (1979.83)  19984.01 (5005.83)  \n",
-       "nys_advrkhs        5709.84 (990.64)  10170.44 (2129.04)  18909.06 (4397.46)  \n",
-       "nys_advrkhs_tmle   5787.61 (990.55)  10207.95 (2128.31)  18943.21 (4396.91)  \n",
-       "nys_rkhs          5713.12 (1044.87)   9876.58 (2066.54)  18766.86 (4458.29)  \n",
-       "nys_rkhs_tmle     5762.74 (1044.77)   9934.91 (2066.16)  18786.90 (4457.75)  \n",
-       "plugin_lg         4895.08 (1302.90)   9287.63 (2327.20)  17878.75 (4676.24)  \n",
-       "plugin_lg_tmle    4896.83 (1302.85)   9290.84 (2327.17)  17887.27 (4676.08)  \n",
-       "plugin_rf         4788.29 (1242.76)   9652.92 (2239.55)  18433.62 (4625.21)  \n",
-       "plugin_rf_tmle    4803.93 (1242.77)   9711.37 (2239.21)  18514.11 (4624.93)  "
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{llll}\n",
+      "\\toprule\n",
+      "{} &                all &                q=1 &                q=2 \\\\\n",
+      "\\midrule\n",
+      "advrkhs          &  7780.32 (1148.31) &   3581.66 (886.33) &  1394.94 (1525.58) \\\\\n",
+      "advrkhs\\_tmle     &  7812.02 (1148.36) &   3588.73 (886.50) &  1442.82 (1525.74) \\\\\n",
+      "rkhs             &  7666.88 (1094.32) &   3459.64 (833.86) &  1099.58 (1569.98) \\\\\n",
+      "rkhs\\_tmle        &  7702.31 (1094.42) &   3449.67 (833.67) &  1153.98 (1570.44) \\\\\n",
+      "splin            &  7797.38 (1040.23) &   3765.62 (907.54) &  1328.90 (1570.15) \\\\\n",
+      "splin\\_tmle       &  7807.19 (1040.47) &   3774.54 (908.39) &  1345.24 (1570.31) \\\\\n",
+      "advnnet          &  8057.74 (1145.68) &  3715.19 (1004.38) &  1451.91 (1554.57) \\\\\n",
+      "advnnet\\_tmle     &  8050.98 (1146.14) &  3725.72 (1004.53) &  1473.97 (1555.17) \\\\\n",
+      "nys\\_advrkhs      &  7642.74 (1123.25) &   3297.10 (842.13) &  1112.28 (1705.50) \\\\\n",
+      "nys\\_advrkhs\\_tmle &  7644.32 (1123.54) &   3280.17 (841.07) &  1140.30 (1705.94) \\\\\n",
+      "nys\\_rkhs         &  7668.70 (1120.26) &   3347.22 (869.65) &  1268.94 (1708.50) \\\\\n",
+      "nys\\_rkhs\\_tmle    &  7674.06 (1120.54) &   3339.12 (868.89) &  1291.54 (1708.69) \\\\\n",
+      "plugin\\_lg        &  6185.66 (1354.52) &   3763.84 (994.24) &  1055.13 (1660.50) \\\\\n",
+      "plugin\\_lg\\_tmle   &  6160.61 (1354.20) &   3765.91 (994.18) &  1082.92 (1660.57) \\\\\n",
+      "plugin\\_rf        &  7479.35 (1080.60) &   3729.77 (817.87) &  1211.21 (1507.66) \\\\\n",
+      "plugin\\_rf\\_tmle   &  7598.20 (1080.47) &   3790.56 (818.19) &  1306.01 (1507.91) \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "res_f = res.reset_index()\n",
-    "res_d = {}\n",
-    "for q in range(6):\n",
-    "    res_d[f'q={q}' if q>0 else 'all'] = {method: \"{:.2f} ({:.2f})\".format(res.loc[(f'q={q}', method), 'point'],\n",
-    "                                                        res.loc[(f'q={q}', method), 'stderr'])\n",
-    "                                         for method in np.unique(res_f['level_1'].values)}        \n",
-    "res_d = pd.DataFrame(res_d)\n",
-    "res_d"
+    "print(res_d[['all', 'q=1', 'q=2']].to_latex(float_format=lambda x: f'{x:.2f}'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{llll}\n",
+      "\\toprule\n",
+      "{} &                q=3 &                 q=4 &                 q=5 \\\\\n",
+      "\\midrule\n",
+      "advrkhs          &  4855.22 (1609.45) &  10348.87 (2082.64) &  18917.36 (4666.67) \\\\\n",
+      "advrkhs\\_tmle     &  4874.83 (1609.54) &  10407.10 (2081.33) &  18958.28 (4666.20) \\\\\n",
+      "rkhs             &  5435.90 (1155.22) &   9997.07 (2049.76) &  18901.46 (4386.96) \\\\\n",
+      "rkhs\\_tmle        &  5482.76 (1155.03) &  10069.74 (2049.13) &  18969.25 (4386.63) \\\\\n",
+      "splin            &  5279.02 (1337.97) &  11190.33 (2187.54) &  20031.69 (4836.11) \\\\\n",
+      "splin\\_tmle       &  5293.18 (1337.79) &  11226.23 (2185.11) &  20053.82 (4834.65) \\\\\n",
+      "advnnet          &  4893.89 (1630.69) &  10834.89 (1981.76) &  20003.73 (5007.86) \\\\\n",
+      "advnnet\\_tmle     &  4894.32 (1630.75) &  10906.54 (1979.83) &  19984.01 (5005.83) \\\\\n",
+      "nys\\_advrkhs      &   5709.84 (990.64) &  10170.44 (2129.04) &  18909.06 (4397.46) \\\\\n",
+      "nys\\_advrkhs\\_tmle &   5787.61 (990.55) &  10207.95 (2128.31) &  18943.21 (4396.91) \\\\\n",
+      "nys\\_rkhs         &  5713.12 (1044.87) &   9876.58 (2066.54) &  18766.86 (4458.29) \\\\\n",
+      "nys\\_rkhs\\_tmle    &  5762.74 (1044.77) &   9934.91 (2066.16) &  18786.90 (4457.75) \\\\\n",
+      "plugin\\_lg        &  4895.08 (1302.90) &   9287.63 (2327.20) &  17878.75 (4676.24) \\\\\n",
+      "plugin\\_lg\\_tmle   &  4896.83 (1302.85) &   9290.84 (2327.17) &  17887.27 (4676.08) \\\\\n",
+      "plugin\\_rf        &  4788.29 (1242.76) &   9652.92 (2239.55) &  18433.62 (4625.21) \\\\\n",
+      "plugin\\_rf\\_tmle   &  4803.93 (1242.77) &   9711.37 (2239.21) &  18514.11 (4624.93) \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res_d[['q=3', 'q=4', 'q=5']].to_latex(float_format=lambda x: f'{x:.2f}'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
