finalized synthetic experiments

--- a/401k.ipynb
+++ b/401k.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "from advreisz.kernel import AdvNystromKernelReisz\n",
-    "from kernel_experiments import AutoKernel, prod_kernel\n",
+    "from utilities import AutoKernel, prod_kernel\n",
     "\n",
     "# advkernel_fn = lambda: AdvKernelReisz(kernel=AutoKernel(type='var'), regm=6e-4, regl=1e-4)\n",
     "\n",
@@ -117,7 +117,7 @@
    "outputs": [],
    "source": [
     "from advreisz.kernel import AdvKernelReisz\n",
-    "from kernel_experiments import AutoKernel, prod_kernel\n",
+    "from utilities import AutoKernel, prod_kernel\n",
     "\n",
     "# advkernel_fn = lambda: AdvKernelReisz(kernel=AutoKernel(type='var'), regm=6e-4, regl=1e-4)\n",
     "\n",
@@ -136,7 +136,7 @@
    "outputs": [],
    "source": [
     "from advreisz.kernel import NystromKernelReisz\n",
-    "from kernel_experiments import AutoKernel, prod_kernel\n",
+    "from utilities import AutoKernel, prod_kernel\n",
     "\n",
     "# kernel_fn = lambda: KernelReisz(kernel=AutoKernel(type='var'), regl=6e-2)\n",
     "\n",
@@ -157,7 +157,7 @@
    "outputs": [],
    "source": [
     "from advreisz.kernel import KernelReisz\n",
-    "from kernel_experiments import AutoKernel, prod_kernel\n",
+    "from utilities import AutoKernel, prod_kernel\n",
     "\n",
     "# kernel_fn = lambda: KernelReisz(kernel=AutoKernel(type='var'), regl=6e-2)\n",
     "\n",
